fix: Shadow not visible in submenu in dark mode

--- a/src/scss/05_components/_components.support-menu.scss
+++ b/src/scss/05_components/_components.support-menu.scss
@@ -188,7 +188,7 @@
 
     @include breakpoint("md") {
       border-radius: $global-radius;
-      box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+      box-shadow: 0 0 1rem rgba(128, 128, 128, 0.2);
       display: none;
       max-width: 30rem;
       padding: 1.4rem;
